--- a/src/includes/content.pug
+++ b/src/includes/content.pug
@@ -122,7 +122,7 @@ main.wrapper
             +list
             +list
             +list
-    .section.section-blue.flex_column.section-padding.section_image(style='background-image: url(templates/_ares/img/svg/bg-rtava.svg)')
+    .section.section-blue.flex_column.section-padding.section_image.section-auto(style='background-image: url(templates/_ares/img/svg/bg-rtava.svg)')
         .row.expanded
             .columns.small-12
                 .title.title_mistral.title-white.text-center.mb-40 Фотографии предыдущих недель
@@ -145,7 +145,7 @@ main.wrapper
                     +album
                     +album
                     +album
-    .section.section--pig.flex_column.section-padding.section_image(style='background-image: url(templates/_ares/img/png/ice.png)')
+    .section.section-pig.flex_column.section-padding.section_image.section-auto(style='background-image: url(templates/_ares/img/png/ice.png)')
         .row.expanded
             .columns.small-12
                 .title.title_mistral.title-white.text-center.mb-40 Победители предыдущих недель
