--- a/src/assets/less/styles.less
+++ b/src/assets/less/styles.less
@@ -32,7 +32,7 @@ html{
 		font-size: 14px;
 	}
 
-	@media (min-width: 50.375em) and (max-width: 60em){
+	@media (min-width: 50.375em) and (max-width: 64em){
 		font-size: 15px;
 	}
 
@@ -41,7 +41,7 @@ html{
 		font-size: 14px;
 	}
 
-	@media (min-width: 75.375em) and (max-width: 84em){
+	@media (min-width: 75.375em) and (max-width: 120em){
 		font-size: 15px;
 	}
 
@@ -73,10 +73,26 @@ a{
 
 	&_logo{
 		position: relative;
+
+		&-pc{
+			display: block;
+
+			@media (max-width: 63.975em){
+				display: none;
+			}
+		}
+
+		&-mob{
+			display: none;
+			
+			@media (max-width: 63.975em){
+				display: block;
+			}
+		}
 	}
 
-	@media (max-width: 39.975em){
-		top: 1rem;
+	@media (max-width: 63.975em){
+		top: 2rem;
 		left: 1rem;
 		right: 1rem;
 	}
@@ -107,6 +123,10 @@ a{
 			&:hover{
 				color: @yellow;
 			}
+
+			@media (max-width: 63.975em){
+				font-size: 0.875rem;
+			}
 		}
 	}
 }
@@ -132,6 +152,10 @@ a{
 			&:hover{
 				color: @yellow;
 			}
+
+			@media (max-width: 63.975em){
+				font-size: 1.25rem;
+			}
 		}
 	}
 }
@@ -143,6 +167,7 @@ a{
 		position: relative;
 		display: flex;
 		// padding-top: 102.125%;
+		height: 100%;
 		min-height: 60rem;
 		background-position: center;
 		background-repeat: no-repeat;
@@ -169,6 +194,15 @@ a{
 
 	&-padding{
 		padding: 7rem 0;
+	}
+
+	&-auto{
+		min-height: auto;
+		padding: 12rem 0;
+
+		@media (max-width: 63.975em){
+			padding: 5rem 0;
+		}
 	}
 }
 
@@ -729,23 +763,31 @@ a{
 
 	&-blue{
 
-		.owl-dots .owl-dot {
+		.owl-dots {
+			margin-top: 3rem;
 
-			span {
-				background: rgba(255, 255, 255, .7);
+			@media (max-width: 63.975em){
+				margin-top: 1.25rem;
 			}
 
-			&.active{
-				span{
-					background: #00749b;
-    				height: 0.5rem;
+			.owl-dot {
+
+				span {
+					background: rgba(255, 255, 255, .7);
 				}
-			}
-
-			&:hover{
-				span{
-					background: #00749b;
-    				height: 0.5rem;
+	
+				&.active{
+					span{
+						background: #00749b;
+						height: 0.5rem;
+					}
+				}
+	
+				&:hover{
+					span{
+						background: #00749b;
+						height: 0.5rem;
+					}
 				}
 			}
 		}
@@ -753,23 +795,31 @@ a{
 
 	&-pig{
 
-		.owl-dots .owl-dot {
-
-			span {
-				background: rgba(255, 255, 255, .7);
+		.owl-dots {
+			margin-top: 3rem;
+			
+			@media (max-width: 63.975em){
+				margin-top: 1.25rem;
 			}
 
-			&.active{
-				span{
-					background: #cb7297;
-    				height: 0.5rem;
+			.owl-dot {
+
+				span {
+					background: rgba(255, 255, 255, .7);
 				}
-			}
-
-			&:hover{
-				span{
-					background: #cb7297;
-    				height: 0.5rem;
+	
+				&.active{
+					span{
+						background: #cb7297;
+						height: 0.5rem;
+					}
+				}
+	
+				&:hover{
+					span{
+						background: #cb7297;
+						height: 0.5rem;
+					}
 				}
 			}
 		}
