--- a/src/index.pug
+++ b/src/index.pug
@@ -1,7 +1,8 @@
 //- index.pug
 doctype html
-head(lang="ru")
-  include includes/head.pug
-body
-  include includes/header.pug
-  include includes/content.pug
+html
+  head(lang="ru")
+    include includes/head.pug
+  body
+    include includes/header.pug
+    include includes/content.pug
