--- a/src/assets/components/foundation/foundation.css
+++ b/src/assets/components/foundation/foundation.css
@@ -633,6 +633,13 @@ screen and (min-width: 64em) {
     width: 100%;
 }
 
+@media (max-width: 39.975em){
+    .row.expanded {
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
+
 .row.expanded .row {
     margin-right: auto;
     margin-left: auto;
