--- a/src/includes/head.pug
+++ b/src/includes/head.pug
@@ -8,6 +8,9 @@ title
 meta(name='description', content='')
 meta(name='viewport', content='width=device-width, initial-scale=1')
 
+link(rel="icon" type="image/svg+xml" href="templates/_ares/img/svg/favicon.svg")
+
+
 link(rel='stylesheet', href="templates/_ares/css/styles.min.css")
 
 script(src='templates/_ares/js/app.min.js')
