--- a/src/includes/content.pug
+++ b/src/includes/content.pug
@@ -87,9 +87,9 @@ main#top.wrapper
                 .text.text-white.text-center.mb-32
                     p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum m.
         .row.expanded
-            .carousel-caralog.owl-carousel.owl-theme.carousel.carousel-purpure
+            .carousel-caralog.owl-carousel.owl-theme.small-up-1.medium-up-2.large-up-4
                 mixin list
-                    .columns.small-12
+                    .columns
                         .card
                             a(data-fancybox="gallery", href='https://placeimg.com/750/1000/any', class="card_link")
                                 span.card_image(style="background-image: url('https://placeimg.com/750/1000/any')")
@@ -115,8 +115,8 @@ main#top.wrapper
         .row.expanded
             .columns.small-12
                 .title.title_mistral.title-black.text-center.mb-40 Победители прошлой недели
-        .row.expanded.small-up-1.medium-up-2.large-up-5
-            .carousel-caralog.owl-carousel.owl-theme.carousel.carousel-purpure
+        .row.expanded
+            .carousel-caralog.owl-carousel.owl-theme.small-up-1.medium-up-2.large-up-5
                 mixin list
                     .columns
                         .card
